--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 			<button onclick="dodrugs()">Do Drugs</button>
 		</div>
 		<footer>
-			<p>This protest was created by Kayne Ruse in frustration about the draconain media laws surrounding the classification of video games.</p>
+			<p>This protest was created by Kayne Ruse in frustration about the draconian media laws surrounding the classification of video games.</p>
 			<p>Some toff in Canberra thinks we're not capable of consuming interactive media if it depicts drug use. Well fuck you.</p>
 		</footer>
 	</body>
